src/objects/Bundle_Job_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <label>Bundle</label>
        <referenceTo>Bundle__c</referenceTo>
        <relationshipName>Bundle_Job_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipName>Bundle_Job_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vacancy Bundle</label>
    <nameField>
        <displayFormat>VB-{0000000}</displayFormat>
        <label>Vacancy Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacancy Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bundle_and_Vacancy_should_have_same_acco</fullName>
        <active>true</active>
        <description>Bundle_and_Vacancy_should_have_same_accont</description>
        <errorConditionFormula>Bundle__r.Account__c != Job__r.TR1__Account__c</errorConditionFormula>
        <errorMessage>Please select bundle associated to the client which is on vacancy</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Temp_Jobs_can_have_have_bundle</fullName>
        <active>true</active>
        <errorConditionFormula>Job__r.RecordType.Name != &quot;Consulting&quot;</errorConditionFormula>
        <errorMessage>A bundle can be assigned to temp job only</errorMessage>
    </validationRules>
</CustomObject>